--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ section#sobre-mi p {
 section#sobre-mi {
   background-color: #333;
   color: #eee;
-  padding: 50px 0;
+  padding-top: 3px;
+  padding-bottom: 45px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid #eee;
 }
